force-app/main/default/objects/maps__LiveAssetDailySummary__c/maps__LiveAssetDailySummary__c.object-meta.xml
<CustomObject>
    <label>Maps Live Asset Daily Summary</label>
    <nameField>
        <displayFormat>{MMDDYY}-{0000}</displayFormat>
        <label>Maps Live Asset Daily Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Asset Daily Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>