force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__AverageStopTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageStopTimeHours__c</fullName>
    <inlineHelpText>Average duration of user-defined stop events, in hours.</inlineHelpText>
    <label>Average Stop Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>