force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__AverageStopTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageStopTimeMinutes__c</fullName>
    <inlineHelpText>Average duration of user-defined stop events, in minutes.</inlineHelpText>
    <label>Average Stop Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>