force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__CountOfEventsSpeedThreshold__c.field-meta.xml
<CustomField>
    <fullName>maps__CountOfEventsSpeedThreshold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of the speed threshold events recorded that day, as defined in the daily summary configuration</description>
    <inlineHelpText>Count of the speed threshold events recorded that day, as defined in the daily summary configuration</inlineHelpText>
    <label>Count of Events - Speed Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>