force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__CountOfSummaryEventsStops__c.field-meta.xml
<CustomField>
    <fullName>maps__CountOfSummaryEventsStops__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Count of the stop events recorded that day, as defined in the daily summary configuration</inlineHelpText>
    <label>Count of Events - Stops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>