force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__Date__c.field-meta.xml
<CustomField>
    <fullName>maps__Date__c</fullName>
    <description>Date and time report generated</description>
    <inlineHelpText>Date that this summary applies to</inlineHelpText>
    <label>Summary Date</label>
    <type>Date</type>
</CustomField>