force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Device Vendor concatenated with Device ID</inlineHelpText>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>