force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__DrivingDuringHolidayOff__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingDuringHolidayOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication if a trip took place within denoted holiday off</description>
    <inlineHelpText>Indication if a trip took place within denoted holiday off</inlineHelpText>
    <label>Driving During Holiday Off</label>
    <type>Checkbox</type>
</CustomField>