force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__FirstMessageContent__c.field-meta.xml
<CustomField>
    <fullName>maps__FirstMessageContent__c</fullName>
    <description>This field represents the full data content of the first point received by aws for the day.</description>
    <inlineHelpText>This field represents the full data content of the first point received by aws for the day.</inlineHelpText>
    <label>First Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>