force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__HardBrakingCount__c.field-meta.xml
<CustomField>
    <fullName>maps__HardBrakingCount__c</fullName>
    <inlineHelpText>Count of device messages indicating a hard braking event that day (when available)</inlineHelpText>
    <label>Number of Hard Braking Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>