force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LastMessageTimestamp__c.field-meta.xml
<CustomField>
    <fullName>maps__LastMessageTimestamp__c</fullName>
    <description>This field represents the date and time of the last point received by aws for the day.</description>
    <inlineHelpText>This field represents the date and time of the last point received by aws for the day.</inlineHelpText>
    <label>Last Message Timestamp</label>
    <type>DateTime</type>
</CustomField>