force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LiveAsset__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Asset</label>
    <referenceTo>maps__LiveAsset__c</referenceTo>
    <relationshipLabel>Maps Live Asset Daily Summaries</relationshipLabel>
    <relationshipName>LiveAssetDailySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>