force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__LiveIoTDevice__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveIoTDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Live IoT Device object</description>
    <label>Live IoT Device</label>
    <referenceTo>maps__LiveIoTDevice__c</referenceTo>
    <relationshipLabel>Maps Live Asset Daily Summaries</relationshipLabel>
    <relationshipName>LiveAssetDailySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>