force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__MaximumSpeedKPH__c.field-meta.xml
<CustomField>
    <fullName>maps__MaximumSpeedKPH__c</fullName>
    <inlineHelpText>Maximum single speed value received that day (in KPH)</inlineHelpText>
    <label>Maximum Speed (KPH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>