force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__MaximumSpeedMPH__c.field-meta.xml
<CustomField>
    <fullName>maps__MaximumSpeedMPH__c</fullName>
    <description>Top speed traveled</description>
    <formula>ROUND(maps__MaximumSpeedKPH__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum single speed value received that day (in MPH)</inlineHelpText>
    <label>Maximum Speed (MPH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>