force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerKm__c</fullName>
    <inlineHelpText>Last available odometer reading of the day, in kilometers</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>