force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerMiles__c</fullName>
    <description>Last available odometer reading of the day, in miles</description>
    <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last available odometer reading of the day, in miles</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>