force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__TripDistanceMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__TripDistanceMiles__c</fullName>
    <description>This is the value &apos;distance&apos; from the AWS response</description>
    <formula>ROUND(maps__TripDistanceKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total distance traveled in miles</inlineHelpText>
    <label>Total Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>