force-app/main/default/objects/maps__LiveAssetDailySummary__c/fields/maps__User__c.field-meta.xml
<CustomField>
    <fullName>maps__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that is assigned to the associated Device at the time that the Summary was created</description>
    <inlineHelpText>The User that is assigned to the associated Device at the time that the Summary was created</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LiveAssetDailySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>